@@ -11,7 +11,7 @@ filters to find desired points.
 <h2>Creating a Filter</h2>
 <p>
 Filters are applied if the <b>Filter Enabled</b> column is set to true.  Multiple filters can be applied at the same time.  
-Filters can use either % or * as wildcards, all other characters are treated as is.
+Filters can use either % or * as wildcards, all other characters are treated as is.  Using the value <i>null</i> will match null values.
 </p>
 
 <h2>Applying Permissions</h2>
